# gentle-disagree

./: .gitignore  CLAUDE.md  README.md  docker-compose.production.yml  docker-compose.yml
.claude/: settings.json
.claude/skills/code-quality/: SKILL.md
.claude/skills/development-servers/: SKILL.md  architecture.md  troubleshooting.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
frontend/: .env.example  Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/wizard/: AIHelper.tsx  TurnIndicator.tsx  index.ts
frontend/src/hooks/: useLocalSession.ts
frontend/src/lib/: ai.ts  storage.ts  utils.ts
frontend/src/routes/: __root.tsx  about.tsx  history.tsx  index.tsx
frontend/src/routes/session/: new.tsx
frontend/src/routes/session/$sessionId/: acknowledge.tsx  approach.tsx  b-request.tsx  b-statement.tsx  i-statement.tsx  intent.tsx  problem.tsx  readiness.tsx  reflect.tsx  request.tsx  summary.tsx  transition.tsx
